deploy/letsgo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localdate-api
spec:
  selector:
    app: localdate-api
  ports:
    - name: http
      port: 3000
      targetPort: http
